LIMO-172: Fixed spacing in score cell

--- a/src/components/livescore/ls-player-matches-listing/_ls-player-matches-listing.scss
+++ b/src/components/livescore/ls-player-matches-listing/_ls-player-matches-listing.scss
@@ -73,13 +73,7 @@
             bottom: 2px;
           }
         }
-
-        &__score{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-
+        
         &__minute{
           padding: 0;
           flex-grow: 0;
